HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallArgPackedUnsafe/Expected.uv
//! Expected diagnostic metadata for the CallArgPackedUnsafe rejected-source specimen.

expectedDiagnostic("E-TYP-2105", "rule.16.Call-Arg-Packed-Unsafe-Err")
